Use property ids from the property list, as long as we're using preprocessing to create all the Set/Get* functions for nsIDOMCSS2Properties.  Bug 243728, r+sr=dbaron